# apt-insight-platform

./: collect_and_process.py  load_naver_csv.py  pyproject.toml  update_and_migrate.py
agent/: __init__.py  config.py  state.py
agent/agents/: __init__.py
agent/tools/: __init__.py
docs/: Dokploy 실전 배포 매뉴얼.md  워크스페이스_구조재편_계획.md
pipeline/: collect_and_process.py  collect_naver_listing.py  test_hostinger_api.py  update_and_migrate.py  utils.py
shared/: __init__.py  config.py  db_engine.py
webapp/: app.py
webapp/routes/: __init__.py
